--- a/aplicacoes/gestao-estagio/src/main/resources/static/css/aplicacao.css
+++ b/aplicacoes/gestao-estagio/src/main/resources/static/css/aplicacao.css
@@ -69,6 +69,10 @@ h1, h2, h3, h4, h5, h6 {
     border-color: #607d8b;
 }
 
+.panel-title {
+	font-size: 16px;
+}
+
 .panel.panel-bluegray .panel-heading {
   color: #eceff1;
   background-color: #607d8b;
