--- a/aplicacoes/gestao-estagio/src/main/resources/templates/selecao/editar-selecao.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/selecao/editar-selecao.html
@@ -28,30 +28,30 @@
 	      <div class="col-md-4">
 	          <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma" th:inline="text"><i class="fa fa-caret-down fa-caret-right fa-chevron-down" aria-hidden="true"></i> Turma: [[${turma.nome}]] - [[${turma.semestre}]]</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma" th:inline="text"><i class="fa fa-caret-down fa-caret-right fa-chevron-down" aria-hidden="true"></i> Turma: [[${selecao.turma.nome}]] - [[${selecao.turma.semestre}]]</a>
 			  </div>
 	          <div id="detalhesTurma" class="panel-body collapse in">
 				  <table class="table table-hover">
 				    <tbody>
 				     <tr>
 				        <td><strong>Orientador</strong></td>
-				        <td th:text="${turma.orientador == null ? 'Não há orientador' : turma.orientador.nome}"></td>
+				        <td th:text="${selecao.turma.orientador == null ? 'Não há orientador' : selecao.turma.orientador.nome}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Supervisores</strong></td>
-				     	<td th:inline="text"> <span th:if="${#lists.isEmpty(turma.supervisores)}">Não há supervisores</span> <span th:each="sup : ${turma.supervisores}"> [[${sup.nome}]],</span></td>
+				     	<td th:inline="text"> <span th:if="${#lists.isEmpty(selecao.turma.supervisores)}">Não há supervisores</span> <span th:each="sup : ${selecao.turma.supervisores}"> [[${sup.nome}]],</span></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Período</strong></td>
-				        <td><label th:text="${#dates.format(turma.inicio, 'dd/MM/yyyy')}"></label>  a <label th:text="${#dates.format(turma.termino, 'dd/MM/yyyy')}"></label></td>
+				        <td><label th:text="${#dates.format(selecao.turma.inicio, 'dd/MM/yyyy')}"></label>  a <label th:text="${#dates.format(selecao.turma.termino, 'dd/MM/yyyy')}"></label></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Tipo</strong></td>
-				        <td th:text="${turma.tipoTurma}"></td>
+				        <td th:text="${selecao.turma.tipoTurma}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Status</strong></td>
-				        <td th:text="${turma.status}"></td>
+				        <td th:text="${selecao.turma.status}"></td>
 				      </tr>
 				    </tbody>
 				  </table>
@@ -67,7 +67,7 @@
 					<p class="panel-title" data-toggle="collapse" data-target="#selecao">Abrir Seleção</p>
 				</div>
 				<div id="selecao" class="panel-body collapse in">
-					<form id="form-selecao" class="form-horizontal" action="#" th:object="${selecao}" th:action="@{/Selecao/{idTurma}/Editar(idTurma=${turma.id})}" method="post">
+					<form id="form-selecao" class="form-horizontal" action="#" th:object="${selecao}" th:action="@{/Selecao/{idTurma}/Editar(idTurma=${selecao.turma.id})}" method="post">
 						
 						<input type="hidden" th:field="*{turma.id}"/>
 						
