--- a/aplicacoes/gestao-estagio/src/main/resources/templates/selecao/editar-selecao.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/selecao/editar-selecao.html
@@ -121,7 +121,7 @@
 						
 						<div class="form-group">
 							<div class="col-lg-10 col-lg-offset-2">
-								<a type="reset" class="btn btn-default" th:href="@{@{/Selecao/{idSelecao}(idSelecao=${selecao.id})}}">Cancelar</a>
+								<a type="reset" class="btn btn-default" th:href="@{/Selecao/{idSelecao}(idSelecao=${selecao.id})}">Cancelar</a>
 								<button type="submit" class="btn btn-success">Salvar</button>
 							</div>
 						</div>
