--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/detalhes-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/detalhes-turma.html
@@ -106,7 +106,7 @@
 		          <ul th:if="${not #lists.isEmpty(turma.estagios)}" class="list-group">
 		            <li th:each="est :${turma.estagios}" class="list-group-item gp-list-group-item">
 		              <b th:inline="text"> [[${est.estagiario.nomeCompleto}]] </b>
-		              <a th:href="@{/Supervisao/Acompanhamento/{id}(id=${est.estagiario.id})}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">acompanhamento</a>
+		              <a th:href="@{/Supervisao/Acompanhamento/{id}(id=${est.id})}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">acompanhamento</a>
 		            </li>
 		          </ul>
 	           </div>
